# LeadSorterModul

./: .gitignore  CMakeLists.txt  LeadSorterModul  Makefile  README.md  directoryStructureController.py  getInfoRename.py  main.c  sortFiles.py  test.c
WindowsBuild/: README.md  setup.py
libs/ffmpeg/win_x86-64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-55.def  avutil.lib  postproc.lib  swresample.lib  swscale.lib
libs/gnsdk/include/: gnsdk.h  gnsdk_defines.h  gnsdk_dsp.h  gnsdk_error_codes.h  gnsdk_errors.h  gnsdk_link.h  gnsdk_lookup_local.h  gnsdk_lookup_localstream.h  gnsdk_manager.h  gnsdk_manager_gdo.h  gnsdk_manager_gdo_values.h  gnsdk_manager_list_values.h  gnsdk_manager_lists.h  gnsdk_manager_locales.h  gnsdk_manager_logging.h  gnsdk_manager_storage.h  gnsdk_moodgrid.h  gnsdk_musicid.h  gnsdk_musicid_file.h  gnsdk_musicid_stream.h  gnsdk_playlist.h  gnsdk_status.h  gnsdk_storage_sqlite.h  gnsdk_version.h  gnsdk_video.h
libs/gnsdk/linux_x86-64/: libgnsdk_dsp.so.3.07.7  libgnsdk_link.so.3.07.7  libgnsdk_lookup_local.so.3.07.7  libgnsdk_lookup_localstream.so.3.07.7  libgnsdk_manager.so.3.07.7  libgnsdk_moodgrid.so.3.07.7  libgnsdk_musicid.so.3.07.7  libgnsdk_musicid_file.so.3.07.7  libgnsdk_musicid_stream.so.3.07.7  libgnsdk_playlist.so.3.07.7  libgnsdk_storage_sqlite.so.3.07.7  libgnsdk_video.so.3.07.7
libs/gnsdk/mac_x86-64/: libgnsdk_link.3.10.5 Kopie.dylib  libgnsdk_lookup_local.3.10.5 Kopie.dylib  libgnsdk_lookup_localstream.3.10.5 Kopie.dylib  libgnsdk_manager.3.10.5 Kopie.dylib  libgnsdk_moodgrid.3.10.5 Kopie.dylib  libgnsdk_musicid.3.10.5 Kopie.dylib  libgnsdk_musicid_file.3.10.5 Kopie.dylib  libgnsdk_musicid_stream.3.10.5 Kopie.dylib  libgnsdk_playlist.3.10.5 Kopie.dylib  libgnsdk_storage_sqlite.3.10.5 Kopie.dylib
python/: getInfoRename.py  leadSorterApp.py  leadSorterCL.py  leadSorterGUI.py  leadsorter.kv  sortFiles.py  sortFilesGUI.py
wrapper/: DecodeContainer.c  DecodeContainer.h  LookupAudio.c  LookupAudio.h  LookupAudioModule.c  Makefile  TestExe.c  setup.py  setupMinGw.py
(+28 files in other folders)
